<resources>
    <string name="app_name">番剧管理</string>

    <!-- login -->
    <string name="prompt_email">邮箱或用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in_short">登录</string>
    <string name="login_reset">忘记密码？点此重置密码</string>
    <string name="login_register">没有账户？点此注册</string>
    <string name="login_ok">登录成功！</string>
    <string name="login_error_password">密码或用户名错误</string>
    <string name="login_error_email">该邮箱未验证，请先验证邮箱后再登录</string>
    <string name="login_error_email2">用户名或邮箱不存在</string>
    <string name="login_error_password2">密码错误次数太多，请稍后再试或重置密码</string>
    <string name="login_error_empty">用户名和密码不能为空！</string>

    <!-- register -->
    <string name="register_name">用户名（必填）</string>
    <string name="register_email">邮箱（必填）</string>
    <string name="register_password1">密码</string>
    <string name="register_password2">确认密码</string>
    <string name="register_phone">中国大陆手机号码（可选）</string>
    <string name="register_backLogin">已有账户？立即登录</string>
    <string name="register_button">注册</string>
    <string name="register_error_empty">用户名和邮箱不能为空</string>
    <string name="register_error_password1">密码长度须大于等于6位</string>
    <string name="register_error_password2">密码不一致</string>
    <string name="register_error_phone">需输入有效的手机号码</string>
    <string name="register_error_username">该用户名已存在</string>
    <string name="register_error_sameEmail">邮箱已被注册，请更换一个邮箱</string>
    <string name="register_error_email">请输入正确的邮箱地址，否则会无法找回密码！</string>
    <string name="register_ok">注册成功，请先验证邮箱后登录</string>

    <!-- reset password -->
    <string name="reset_title">忘记密码？</string>
    <string name="reset_title2">别担心，请输入您的注册邮箱:</string>
    <string name="reset_hint">一封包含链接的电子邮件将会被发送至该邮箱</string>
    <string name="reset_sendBtn">发送邮件</string>
    <string name="reset_timerLabel">邮件已发送，倒计时结束后可再次发送：</string>
    <string name="reset_error">找不到该账户，请检查邮箱地址是否正确</string>

    <!-- main home -->
    <string name="login_error">请先登录</string>
    <string name="exit_toast">再次返回退出程序</string>

    <!-- menu -->
    <string name="menu_welcome">欢迎回来</string>
    <string name="menu_home">主页</string>
    <string name="menu_account">账户设置</string>
    <string name="menu_settings">程序设置</string>
    <string name="menu_logout">登出</string>
    <string name="menu_group1">设置</string>
    <string name="menu_group2">程序操作</string>
    <string name="bottom_menu1">番剧</string>
    <string name="bottom_menu2">剧场版</string>

    <!-- account setting -->
    <string name="accountSet_title">账户设置</string>
    <string name="accountSet_username">用户名：</string>
    <string name="accountSet_email">邮箱（不可修改）：</string>
    <string name="accountSet_password">密码：</string>
    <string name="accountSet_password2">重置密码</string>
    <string name="accountSet_phone">电话号码：</string>
    <string name="accountSet_edit">编辑信息</string>
    <string name="accountSet_save">保存</string>
    <string name="accountSet_ok">账户信息修改成功</string>
    <string name="accountSet_error_username">用户名不能为空</string>
    <string name="accountSet_resetLabel">再次登录需使用新密码登录</string>
    <string name="accountSet_error_reset">邮件发送次数过多，请稍后再试</string>

    <!-- logout -->
    <string name="logout_label">正在登出……</string>
    <string name="logout_title">确认登出</string>
    <string name="logout_content">确定要登出吗？登出后需要重新登录</string>

    <!-- fanju home -->
    <string name="fanju_tab1">新番追番</string>
    <string name="fanju_tab2">旧番补番</string>
    <string name="fanju_tab3">已看完</string>

    <!-- movie home -->
    <string name="movie_tab1">已看</string>
    <string name="movie_home">未看</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_fanju">Home_Fanju</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>