<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />

    <item android:title="@string/menu_group1">
        <menu>
            <group>
                <item
                    android:id="@+id/nav_account"
                    android:icon="@drawable/ic_account"
                    android:title="@string/menu_account" />

                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/settings_icon"
                    android:title="@string/menu_settings" />

            </group>
        </menu>
    </item>

    <item android:title="@string/menu_group2">
        <menu>
            <group>
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/menu_logout" />
            </group>
        </menu>
    </item>



</menu>