<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.login.ResetPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="35px"
        android:paddingHorizontal="30px"
        android:orientation="vertical">


        <ImageButton
            android:id="@+id/reset_backLogin"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_title"
            android:textSize="50sp"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="160px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_title2"
            android:textSize="18sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="60px" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/reset_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/reset_hint" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="35px" />

        <TextView
            android:id="@+id/reset_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="40px" />

        <Button
            android:id="@+id/reset_sendBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textSize="20sp"
            android:text="@string/reset_sendBtn" />
    </LinearLayout>

</FrameLayout>